--- a/pages/myBuy/myBuy.wxml
+++ b/pages/myBuy/myBuy.wxml
@@ -1,19 +1,21 @@
-<view class="{{screen}}">
+<view class="{{screen}} {{colorStyle}}" style="background-color: {{backgroundColor}}; height: 100%;">
   <scroll-view class="latelyListen" scroll-x="true" scroll-left="{{scrollLeft}}" lower-threshold="1920"bindscrolltolower="getLayoutData">
     <view class="mianContent">
-      <view class="label-view">
-        <view class="title{{index === currentTap ? ' active-tap' : ''}}" wx:for="{{labels}}" wx:key="index" style="background-color: {{index === currentTap ? mainColor : 'rgba(255,255,255, 0.1)'}}"
-          data-index="{{index}}" bindtap="selectTap">
+      <view class="label-view" wx:if="{{labels.show}}">
+        <view class="title{{index === currentTap ? ' active-tap' : ''}}" wx:for="{{labels.data}}" wx:key="index" style="background-color: {{index === currentTap ? mainColor : 'rgba(255,255,255, 0.1)'}}"
+          data-index="{{index}}" data-name="{{item.name}}" bindtap="selectTap">
           <text>{{item.name}}</text>
         </view>
       </view>
       <!-- 页面盒子 -->
-      <story wx:if="{{loadReady}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
-        data-id="{{item.id}}" data-title="{{item.title}}" data-src="{{item.src}}" data-contentype="{{item.label}}" bindtap="linkAbumInfo"
-        datasource="{{item}}" className="{{screen}}"></story>
+      <view class="storyBox">
+        <story wx:if="{{req}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
+          data-id="{{item.id}}" data-title="{{item.title}}" data-src="{{item.src}}" data-contentype="{{item.label}}" bindtap="linkAbumInfo"
+          datasource="{{item}}" className="{{screen}}"></story>
+      </view>
     </view>
     <!-- 加载中盒子 -->
-    <view class="albumCard" wx:if="{{!loadReady}}" wx:for="{{5}}" wx:key="index">
+    <view class="albumCard" wx:if="{{!req}}" wx:for="{{5}}" wx:key="index">
       <view class="imgB bone"></view>
       <view class="albumTitB">
         <view class="tb bone"></view>
