--- a/pages/abumInfo/abumInfo.wxml
+++ b/pages/abumInfo/abumInfo.wxml
@@ -37,7 +37,7 @@
     <view class="songList" animation="{{loadAnimate}}" bindtouchstart="touchStart" bindtouchend="touchEnd" bindtouchmove="touchMove">
       <view wx-if="{{showLoadTop}}" class="loading">加载中...</view>
       <view bindtap="goPlayInfo" style="color: {{item.id === currentId ? mainColor : '#fff'}}" data-song='{{item}}' data-no='{{index}}' wx:key="index" wx:for="{{canplay}}">
-        <image class="playGif" wx:if="{{item.id === currentId && palying}}" src="/images/playing.gif" />
+        <image class="playGif" wx:if="{{item.id === currentId && playing}}" src="/images/playing.gif" />
         
         <text wx:else>{{(pageNo-1) * pageSize + index + 1}}</text>
         <text>{{item.title}}</text>
