完成首页，列表，播放详情
完成首页，列表，播放详情

--- a/components/story/index.wxml
+++ b/components/story/index.wxml
@@ -7,6 +7,7 @@
     <image class="countpic" src="{{countpic}}"></image>
     <text class="countxt">{{datasource.count}}</text>
   </view>
+  <image     data-typeid="{{datasource.id}}" catchtap="playMedia" class="play-img"></image>
   <view wx:if="{{src.length > 0}}"
       class="like"
       style="background-image:url({{src}})"
