--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -1,7 +1,7 @@
 <view class="{{screen}} {{colorStyle}}" style="background-color: {{backgroundColor}}; height: 100%;">
   <scroll-view class="index" scroll-x="true" scroll-left="{{scrollLeft}}" lower-threshold="1920"bindscrolltolower="getLayoutData" bindscroll="scrollhandle">
     <!-- 快捷入口 -->
-    <view class="quickEntry" wx:if="{{lalyLtn.show}}">
+    <!-- <view class="quickEntry" wx:if="{{lalyLtn.show}}">
       <view class="quickEntrybox" style="height: 30.73vh"  wx:if="{{lalyLtn.data.length > 1}}" wx:for="{{lalyLtn.data}}" wx:key="index"  bindtap="tolatelyListen" data-page="{{item.name}}" data-index="{{index}}">
         <image class="quickEntryicon" src="{{ item.icon }}"></image>
         <view class="latelyLtnTit">{{ item.title }}</view>
@@ -10,7 +10,7 @@
         <image class="quickEntryicon" src="{{ item.icon }}"></image>
         <view class="latelyLtnTit">{{ item.title }}</view>
       </view>
-    </view>
+    </view> -->
 
     <view class="mianContent">
       <view class="label-box" wx:if="{{labels.show}}">
@@ -26,7 +26,7 @@
         </view>
       </view>
       <!-- 页面盒子 -->
-      <view class="storyBox">
+      <view style="margin-top:3vh" class="storyBox">
         <story wx:if="{{info.length>0 && reqL}}" wx:for="{{info}}" wx:key="index" data-no="{{index}}"
         data-id="{{item.id}}" data-title="{{item.title}}" data-src="{{item.src}}" data-contentype="{{item.contentType}}" bindtap="linkAbumInfo"
         datasource="{{item}}" countpic="{{countPic}}" className="{{screen}}"></story>
