--- a/pages/playInfo/playInfo.wxml
+++ b/pages/playInfo/playInfo.wxml
@@ -135,10 +135,10 @@
     >
   <view class="songList">
       <view class="view" style="color: {{item.id === currentId ? mainColor : '#fff'}}"  wx:key="index" wx:for="{{canplay}}">
-        <view  bindtap="playSong" data-no='{{index}}' data-song="{{item}}" style="width: 100%;height: 6.6vh;line-height: 6.6vh">
+        <view  bindtap="playSong" data-no='{{index}}' data-song="{{item}}" style="width: 100%;height: 6.6vh;line-height: 6.6vh;">
           <image class="playGif" wx:if="{{item.id === currentId && playing}}" src="/images/playing.gif" />
           <text wx:else>{{index + 1}}</text>
-          <text>{{item.title}}</text>
+          <text style="width:80%;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;">{{item.title}}</text>
           <text class="audition" style="color:{{mainColor}};border: 1px solid {{mainColor}}" wx:if="{{item.feeType === '01'}}">试听</text>
           <text>{{item.dt}}</text>
         </view>
